--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.0.3",
     "@swimlane/ngx-charts": "^14.0.0",
     "angular-animations": "0.0.10",
+    "moment": "^2.27.0",
     "ngx-router-animations": "0.0.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
