--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@swimlane/ngx-charts": "^14.0.0",
     "angular-animations": "0.0.10",
     "moment": "^2.27.0",
